--- a/portfolio.html
+++ b/portfolio.html
@@ -16,18 +16,16 @@
           <nav class="page-header__nav">
             <div class="position">
               <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-              <button type="button" class="button__logo" data-mob-open data-mobbtn>
-                  <svg width="40" height="40" aria-label="mobile menu switch">
-                  <use class="icon-menu" href="./images/sprite.svg#iconmenu_open " ></use>
-                  <use class="icon-cross" href="./images/sprite.svg#iconmenu_close" ></use>
-                  </svg>
+              <button type="button" class="button__logo" data-mob-open>
+                <svg width="40" height="40" aria-label="mobile menu switch">
+                  <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
+                </svg>
               </button>
-
             </div>
             <div class="page-header__menu" data-mob>
               <ul class="page-header__list page-header__list--nav">
                 <li class="page-header__item page-header__item--nav">
-                  <a class="page-header__link" href="./index.html">Студия</a>
+                  <a class="page-header__link " href="./index.html">Студия</a>
                 </li>
                 <li class="page-header__item page-header__item--nav">
                   <a class="page-header__link page-header__link--active" href="./portfolio.html">Портфолио</a>
@@ -86,6 +84,11 @@
                   <a class="social-border" href="">LinkedIn</a>
                 </li>
               </ul>
+              <button type="button" class="button__logos" data-mob-close data-mobbtn>
+                <svg width="40" height="40" aria-label="mobile menu switch">
+                  <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
+                </svg>
+              </button>
             </div>
           </nav>
         </div>
