--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@
               </button>
             </div>
             <div class="page-header__menu" data-mob>
+              <div class="containers">
               <ul class="page-header__list page-header__list--nav">
                 <li class="page-header__item page-header__item--nav">
                   <a class="page-header__link " href="./index.html">Студия</a>
@@ -34,24 +35,7 @@
                   <a class="page-header__link" href="">Контакты</a>
                 </li>
               </ul>
-              <ul class="page-header__list page-header__list--contact ">
-                <li class="page-header__item page-header__item--contact">
-                  <a href="mailto:info@devstudio.com" class="page-header__link page-header__link--mail">
-                    <svg class="page-header__icon--mail">
-                      <use href="./images/sprite.svg#iconenvelope"></use>
-                    </svg>
-                    info@devstudio.com
-                  </a>
-                </li>
-                <li class="page-header__item page-header__item--contact">
-                  <a href="tel:+380961111111" class="page-header__link page-header__link--tell">
-                    <svg class="page-header__icon--tell">
-                      <use href="./images/sprite.svg#iconsmartphone"></use>
-                    </svg>
-                    +38(096)111 11 11
-                  </a>
-                </li>
-              </ul>
+              <div class="mob-menu-Link">
               <ul class="page-header__list page-header__list--mobile">
                 <li class="page-header__item page-header__item--contact">
                   <a href="tel:+380961111111" class="page-header__link page-header__link--tell">
@@ -84,11 +68,31 @@
                   <a class="social-border" href="">LinkedIn</a>
                 </li>
               </ul>
+              </div>
               <button type="button" class="button__logos" data-mob-close data-mobbtn>
                 <svg width="40" height="40" aria-label="mobile menu switch">
                   <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
                 </svg>
               </button>
+              </div>
+                              <ul class="page-header__list page-header__list--contact ">
+                <li class="page-header__item page-header__item--contact">
+                  <a href="mailto:info@devstudio.com" class="page-header__link page-header__link--mail">
+                    <svg class="page-header__icon--mail">
+                      <use href="./images/sprite.svg#iconenvelope"></use>
+                    </svg>
+                    info@devstudio.com
+                  </a>
+                </li>
+                <li class="page-header__item page-header__item--contact">
+                  <a href="tel:+380961111111" class="page-header__link page-header__link--tell">
+                    <svg class="page-header__icon--tell">
+                      <use href="./images/sprite.svg#iconsmartphone"></use>
+                    </svg>
+                    +38(096)111 11 11
+                  </a>
+                </li>
+              </ul>
             </div>
           </nav>
         </div>
