--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     <li class="comanda__item">
                         <picture>
                           <source srcset="./images/laptop/igor.jpg 1x, ./images/laptop/igor@2x.jpg 2x" media="(min-width: 1200px)" />
-                          <source srcset="./images/tablet/igor.jpg 1x, ./images/tablet/igor@2x.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/tablet/igor.jpg 1x, ./images/tablet/igor@2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                           <source srcset="./images/mobile/igor.jpg 1x, ./images/mobile/igor@2x.jpg 2x" media="(max-width: 767px)" />
                           <img class="foto" src="./images/mobile/igor.jpg" alt="Игорь Демьяненко" />
                         </picture> 
@@ -303,7 +303,7 @@
                     <li class="comanda__item">
                          <picture>
                           <source srcset="./images/laptop/olga.jpg 1x, ./images/laptop/olga@2x.jpg 2x" media="(min-width: 1200px)" />
-                          <source srcset="./images/tablet/olga.jpg 1x, ./images/tablet/olga-2x.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/tablet/olga.jpg 1x, ./images/tablet/olga-2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                           <source srcset="./images/mobile/olga.jpg 1x, ./images/mobile/olga-2x.jpg 2x" media="(max-width: 767px)" />
                           <img class="foto" src="./images/mobile/olga.jpg" alt="Ольга Репина" />
                         </picture>
@@ -341,7 +341,7 @@
                     <li class="comanda__item">
                         <picture>
                           <source srcset="./images/laptop/nicholas.jpg 1x, ./images/laptop/nicholas@2x.jpg 2x" media="(min-width: 1200px)" />                    
-                          <source srcset="./images/tablet/nicholas.jpg 1x, ./images/tablet/nicholas-2x.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/tablet/nicholas.jpg 1x, ./images/tablet/nicholas-2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                           <source srcset="./images/mobile/nicholas.jpg 1x, ./images/mobile/nicholas-2x.jpg 2x" media="(max-width: 767px)" />
                           <img class="foto" src="./images/mobile/nicholas.jpg" alt="Николай Тарасов" />
                         </picture>
@@ -379,7 +379,7 @@
                     <li class="comanda__item">
                         <picture>
                           <source srcset="./images/laptop/michael.jpg 1x, ./images/laptop/michael@2x.jpg 2x" media="(min-width: 1200px)" />
-                          <source srcset="./images/tablet/michael.jpg 1x, ./images/tablet/michael-2x.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/tablet/michael.jpg 1x, ./images/tablet/michael-2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                           <source srcset="./images/mobile/michael.jpg 1x, ./images/mobile/michael-2x.jpg 2x" media="(max-width: 767px)" />
                           <img class="foto" src="./images/mobile/michael.jpg" alt="Михаил Ермаков" />
                         </picture>
