--- a/portfolio.html
+++ b/portfolio.html
@@ -131,7 +131,7 @@
                             <div class="services__picture">
                             <picture>
                               <source srcset="./images/laptop/tehno.jpg 1x, ./images/laptop/tehno@2x.jpg 2x" media="(min-width: 1200px)" />
-                              <source srcset="./images/tablet/tehno.jpg 1x, ./images/tablet/tehno@2x.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/tablet/tehno.jpg 1x, ./images/tablet/tehno@2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                               <source srcset="./images/mobile/tehno.jpg 1x, ./images/mobile/tehno@2x.jpg 2x" media="(max-width: 767px)" />
                               <img src="./images/mobile/tehno.jpg" alt="Технокряк" />
                             </picture>
@@ -151,7 +151,7 @@
                             <div class="services__picture">
                               <picture>
                               <source srcset="./images/laptop/golden-star.jpg 1x, ./images/laptop/golden-star@2x.jpg 2x" media="(min-width: 1200px)" />
-                              <source srcset="./images/tablet/golden-star.jpg 1x, ./images/tablet/golden-star@2x.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/tablet/golden-star.jpg 1x, ./images/tablet/golden-star@2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                               <source srcset="./images/mobile/golden-star.jpg 1x, ./images/mobile/golden-star@2x.jpg 2x" media="(max-width: 767px)" />
                               <img src="./images/mobile/golden-star.jpg" alt="Постер New Orlean vs Golden Star" />
                               </picture>
@@ -171,7 +171,7 @@
                             <div class="services__picture">
                               <picture>
                               <source srcset="./images/laptop/seafood.jpg 1x, ./images/laptop/seafood@2x.jpg 2x" media="(min-width: 1200px)" />
-                              <source srcset="./images/tablet/seafood.jpg 1x, ./images/tablet/seafood@2x.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/tablet/seafood.jpg 1x, ./images/tablet/seafood@2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                               <source srcset="./images/mobile/seafood.jpg 1x, ./images/mobile/seafood@2x.jpg 2x" media="(max-width: 767px)" />
                               <img src="./images/mobile/seafood.jpg" alt="Ресторан Seafood" />
                               </picture>
@@ -191,7 +191,7 @@
                             <div class="services__picture">
                               <picture>
                               <source srcset="./images/laptop/prime.jpg 1x, ./images/laptop/prime@2x.jpg 2x" media="(min-width: 1200px)" />
-                              <source srcset="./images/tablet/prime.jpg 1x, ./images/tablet/prime@2x.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/tablet/prime.jpg 1x, ./images/tablet/prime@2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                               <source srcset="./images/mobile/prime.jpg 1x, ./images/mobile/prime@2x.jpg 2x" media="(max-width: 767px)" />
                               <img src="./images/mobile/prime.jpg" alt="Проект Prime" />
                               </picture>
@@ -211,7 +211,7 @@
                             <div class="services__picture">
                               <picture>
                                 <source srcset="./images/laptop/boxes.jpg 1x, ./images/laptop/boxes@2x.jpg 2x" media="(min-width: 1200px)" />
-                                <source srcset="./images/tablet/boxes.jpg 1x, ./images/tablet/boxes@2x.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/tablet/boxes.jpg 1x, ./images/tablet/boxes@2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                                 <source srcset="./images/mobile/boxes.jpg 1x, ./images/mobile/boxes@2x.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/mobile/boxes.jpg" alt="Проект Boxes" />
                               </picture>
@@ -231,7 +231,7 @@
                             <div class="services__picture">
                                 <picture>
                                 <source srcset="./images/laptop/borders.jpg 1x, ./images/laptop/borders@2x.jpg 2x" media="(min-width: 1200px)" />
-                                <source srcset="./images/tablet/borders.jpg 1x, ./images/tablet/borders@2x.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/tablet/borders.jpg 1x, ./images/tablet/borders@2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                                 <source srcset="./images/mobile/borders.jpg 1x, ./images/mobile/borders@2x.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/mobile/borders.jpg" alt="Inspiration has no Borders" />
                               </picture>
@@ -251,7 +251,7 @@
                             <div class="services__picture">
                                 <picture>
                                 <source srcset="./images/laptop/limited-edition.jpg 1x, ./images/laptop/limited-edition@2x.jpg 2x" media="(min-width: 1200px)" />
-                                <source srcset="./images/tablet/limited-edition.jpg 1x, ./images/tablet/limited-edition@2x.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/tablet/limited-edition.jpg 1x, ./images/tablet/limited-edition@2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                                 <source srcset="./images/mobile/limited-edition.jpg 1x, ./images/mobile/limited-edition@2x.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/mobile/limited-edition.jpg" alt="Издание Limited Edition" />
                                 </picture>
@@ -271,7 +271,7 @@
                             <div class="services__picture">
                                 <picture>
                                 <source srcset="./images/laptop/lab.jpg 1x, ./images/laptop/lab@2x.jpg 2x" media="(min-width: 1200px)" />
-                                <source srcset="./images/tablet/lab.jpg 1x, ./images/tablet/lab@2x.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/tablet/lab.jpg 1x, ./images/tablet/lab@2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                                 <source srcset="./images/mobile/lab.jpg 1x, ./images/mobile/lab@2x.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/mobile/lab.jpg" alt="Проект LAB" />
                                 </picture>                            
@@ -292,7 +292,7 @@
                             <!-- <img src="./images/business.jpg" alt="Growing Business" width="370"> -->
                                 <picture>
                                 <source srcset="./images/laptop/growing-business.jpg 1x, ./images/laptop/growing-business@2x.jpg 2x" media="(min-width: 1200px)" />
-                                <source srcset="./images/tablet/growing-business.jpg 1x, ./images/tablet/growing-business@2x.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/tablet/growing-business.jpg 1x, ./images/tablet/growing-business@2x.jpg 2x" media="(min-width: 768px) and (max-width: 1199px)" />
                                 <source srcset="./images/mobile/growing-business.jpg 1x, ./images/mobile/growing-business@2x.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/mobile/growing-business.jpg" alt="Growing Business" />
                                 </picture>
